cmake_minimum_required(VERSION 3.16)
project(mini_ftpd VERSION 3.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(config ./config/config.cpp)
add_library(file ./file/file_utility.cpp )
add_library(ipc ./ipc/socket_ipc.cpp )
add_library(sock ./socket/block_socket.cpp)
add_library(proce ./process/process_utility.cpp)

add_executable(mini_ftpd main.cpp ftp_protocol.cpp session.cpp connection_limit.cpp)
target_link_libraries(mini_ftpd PUBLIC config)
target_link_libraries(mini_ftpd PUBLIC file)
target_link_libraries(mini_ftpd PUBLIC ipc)
target_link_libraries(mini_ftpd PUBLIC sock)
target_link_libraries(mini_ftpd PUBLIC proce)
target_link_libraries(mini_ftpd PUBLIC crypt)
target_include_directories(mini_ftpd PUBLIC ./config)
target_include_directories(mini_ftpd PUBLIC ./ipc)
target_include_directories(mini_ftpd PUBLIC ./file)
target_include_directories(mini_ftpd PUBLIC ./socket)
target_include_directories(mini_ftpd PUBLIC ./process)
